the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2017-10-17] ZVSS: added index conversion in Share()
* [2017-10-04] DKG-tools: changed default TCP/IP port range start to 55000
* [2017-10-01] Bugfix: VTMF checking in dkg-decrypt due to FIPS domain parameters
* [2017-10-01] Bugfix: type casting inside snprintf() of hash function g()
* [2017-09-05] DKG-tools: fixes upper limit of t-resilience by option "-t"
* [2017-09-03] release 1.3.2 of LibTMCG
* [2017-08-23] DKG-tools: added FIPS 186-4 compliance for dkg-gencrs
* [2017-08-20] RBC: implements a synchonization mechanism in Sync()
* [2017-08-17] RBC: important bugfixes in Deliver() and DeliverFrom()
* [2017-08-09] DKG-tools: added built-in TCP/IP message exchange (option "-H")
* [2017-08-09] added configure feature --disable-dkgtools
* [2017-08-07] DKG-tools: added option "-P" for setting aiounicast passwords
* [2017-08-04] DKG-tools: changed storage of public data for shared keys (DKG)
* [2017-07-30] DKG-tools: added dkg-revoke for revocation of a shared key
* [2017-07-30] RFC4880: interface of PacketDecode() changed
* [2017-07-28] RFC4880: added interfaces for key revocation signatures
* [2017-07-27] DKG-tools: added dkg-sign for creating detached signatures
* [2017-07-27] DKG-tools: added option "-e" for expiration of keys and sigs
* [2017-07-27] RFC4880: more interfaces for signatures changed or added
* [2017-07-23] RFC4880: interface of Packet{Pub,Sec}Encode() changed 
* [2017-07-22] RFC4880: interface of PacketS{ub,sb}Encode() changed for DSA
* [2017-07-22] DKG-tools: added option "-s" for generating a shared DSA key
* [2017-07-21] added threshold DSS/DSA scheme of Canetti et al. (ASTC, DSS)