@@ -20,7 +20,7 @@
 AM_CPPFLAGS = -I$(top_srcdir)/src @LIBGCRYPT_CFLAGS@ @GPG_ERROR_CFLAGS@ @LIBGMP_CFLAGS@ @GNUNET_CFLAGS@
 LDADD = @LIBGCRYPT_LIBS@ @GPG_ERROR_LIBS@ @LIBGMP_LIBS@ @GNUNET_LIBS@ ../src/libTMCG.la
 
-bin_PROGRAMS = dkg-gencrs dkg-generate dkg-encrypt dkg-decrypt dkg-sign dkg-revoke
+bin_PROGRAMS = dkg-gencrs dkg-generate dkg-encrypt dkg-decrypt dkg-sign dkg-revoke dkg-keyinfo
 
 dist_man_MANS = dkg-generate.1 dkg-encrypt.1 dkg-decrypt.1 dkg-sign.1 dkg-revoke.1
 
@@ -30,5 +30,6 @@ dkg_encrypt_SOURCES = dkg-encrypt.cc
 dkg_decrypt_SOURCES = dkg-builtin-common.hh dkg-builtin-common.cc dkg-gnunet-common.hh dkg-gnunet-common.cc dkg-decrypt.cc
 dkg_sign_SOURCES = dkg-builtin-common.hh dkg-builtin-common.cc dkg-gnunet-common.hh dkg-gnunet-common.cc dkg-common.hh dkg-common.cc dkg-sign.cc
 dkg_revoke_SOURCES = dkg-builtin-common.hh dkg-builtin-common.cc dkg-gnunet-common.hh dkg-gnunet-common.cc dkg-common.hh dkg-common.cc dkg-revoke.cc
+dkg_keyinfo_SOURCES = dkg-common.hh dkg-common.cc dkg-keyinfo.cc
 
 
