@@ -7,6 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-10-22] DKG-tools: added dkg-keyinfo to show some DSS key parameters
+* [2017-10-20] ASTC: added proactive security: refresh of key shares
 * [2017-10-17] ZVSS: added index conversion in Share()
 * [2017-10-04] DKG-tools: changed default TCP/IP port range start to 55000
 * [2017-10-01] Bugfix: VTMF checking in dkg-decrypt due to FIPS domain parameters
